--- a/data/urls.properties
+++ b/data/urls.properties
@@ -1,3 +1,3 @@
-https://lde.tbe.taleo.net/lde01/ats/careers/requisition.jsp?org=BIS&cws=1&rid=1164|Current vacancies - Payroll Manager
-https://lde.tbe.taleo.net/lde01/ats/careers/requisition.jsp?org=BIS&cws=1&rid=1167|Current vacancies - IT Infrastructure Operations Analyst
-https://lde.tbe.taleo.net/lde01/ats/careers/requisition.jsp?org=BIS&cws=1&rid=1168|Current vacancies - Senior Security Specialist
+https://www.bis.org/publ/bisbull84.htm|Artificial intelligence in central banking
+https://www.bis.org/publ/bppdf/bispap142.htm|Inflation and labour markets
+https://www.bis.org/publ/bppdf/bispap143.htm|Central banking in the Americas: Lessons from two decades
