- add url link in ref - add upload pdf for ref WIP - update avatar

--- a/.streamlit/config.toml
+++ b/.streamlit/config.toml
@@ -1,5 +1,5 @@
 [theme]
 base="light"
-primaryColor="#aa322f"
+primaryColor="#2B2626"
 #secondaryBackgroundColor="#aa322f"
 secondaryBackgroundColor="rgb(255,250,250)"
