- improve html precision by   using HTMLHeaderTextSplitter   customazation based on BIS Bulletins page structure - clean un-needed py packages

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,18 +1,19 @@
 langchain
 langchain_openai
 langchain_core
+langchain-text-splitters
 openai
-selenium
-unstructured
-unstructured[pdf]
+#selenium
+#unstructured
+#unstructured[pdf]
 chromadb
-tiktoken
-playwright
-beautifulsoup4
+#tiktoken
+#playwright
+#beautifulsoup4
 transformers
-sentence_transformers
+#sentence_transformers
 streamlit
-tiktoken
+#tiktoken
 PyPDF2
 pysqlite3-binary
 streamlit-js-eval
