clean pip package

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,21 +1,11 @@
 langchain
 langchain_openai
-langchain_core
+langchain_community
 langchain-text-splitters
 openai
-#selenium
-#unstructured
-#unstructured[pdf]
 chromadb
-#tiktoken
-#playwright
-#beautifulsoup4
-transformers
-#sentence_transformers
 streamlit
-#tiktoken
 PyPDF2
 pysqlite3-binary
 streamlit-js-eval
-sentence-transformers
 langsmith
