add static file serving for image link

--- a/.streamlit/config.toml
+++ b/.streamlit/config.toml
@@ -3,3 +3,6 @@ base="light"
 primaryColor="#2B2626"
 #secondaryBackgroundColor="#aa322f"
 secondaryBackgroundColor="rgb(255,250,250)"
+
+[server]
+enableStaticServing = true
